2013-01-11  Pratik Solanki  <psolanki@apple.com>

        TestRunner leaks when running tests
        https://bugs.webkit.org/show_bug.cgi?id=106683

        Reviewed by Simon Fraser.

        Remove extra ref() that we missed out on deleting when refactoring window.layoutTestController
        to window.testRunner in r124705. This caused the TestRunner object to be leaked when running
        tests.

        * DumpRenderTree/TestRunner.cpp:
        (TestRunner::makeWindowObject):

2013-01-11  Julie Parent  <jparent@chromium.org>

        Dashboard Cleanup: Add isLoadingComplete to the loader.Loader object.
        https://bugs.webkit.org/show_bug.cgi?id=106247

        Old code nulled out the loader instance when it completed loading and
        then later used the fact that it was null to determine if it had loaded
        or not.  This is not only unintuitive, but it also prevents using the
        loader object later on.
        
        Added new method, used it, added unit test for it.
        
        Reviewed by Dirk Pranke.

        * TestResultServer/static-dashboards/dashboard_base.js:
        (resourceLoadingComplete):
        (handleLocationChange):
        * TestResultServer/static-dashboards/loader.js:
        (.):
        * TestResultServer/static-dashboards/loader_unittests.js:

2013-01-11  Ryosuke Niwa  <rniwa@webkit.org>

        Try CRLF to LF change in r139407 again.

        * BuildSlaveSupport/delete-stale-build-files:
        (main):
        (webkitBuildDirectory):
        * BuildSlaveSupport/kill-old-processes:
        (main):

2013-01-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Disable the unit tests timeout when running from make check
        https://bugs.webkit.org/show_bug.cgi?id=106670

        Reviewed by Philippe Normand.

        * GNUmakefile.am: Pass --timeout=-1 to run-gtk-test.

2013-01-11  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        Yet another unreviewed fix after r139431.
