@@ -363,7 +363,7 @@ class RunWebKitTests(shell.Test):
         self.incorrectLayoutLines = incorrectLayoutLines
 
     # FIXME: This will break if new-run-webkit-tests changes its default log formatter.
-    nrwt_log_message_regexp = re.compile(r'(?P<log_prefix>.*) (?P<log_level>DEBUG|INFO) (?P<message>.*)')
+    nrwt_log_message_regexp = re.compile(r'\d{2}:\d{2}:\d{2}(\.\d+)?\s+\d+\s+(?P<message>.*)')
 
     def _strip_python_logging_prefix(self, line):
         match_object = self.nrwt_log_message_regexp.match(line)
